--- a/index.html
+++ b/index.html
@@ -20,22 +20,23 @@ body {
     }
 .book {
   position: absolute;
-  width: 50px;
-  height: 50px;
-  font-size: 50px; /* Adjust as needed */
+  width: 100px;
+  height: 100px;
+  font-size: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 10; /* Bring the book to the front */
+  left: 100px;
 }
 .pipe {
   position: absolute;
-  width: 80px;
+  width: 120px;
   background-image: url('pillar.png'); /* Set the background image */
   background-size: contain; /* Adjusts the image to cover the entire pipe */
   background-repeat: repeat-y; /* Repeat the image vertically */
   background-position: center; /* Centers the image */
-  right: -80px; /* Start off-screen */
+  right: -120px; /* Start off-screen */
 }
 .pipe.top {
   top: 0;
@@ -62,7 +63,7 @@ let gravity = 0.5;
 let jumpForce = -8;
 let isOpen = false;
 let pipeX = container.clientWidth;
-let pipeGap = 300;
+let pipeGap = 400;
 let pipeWidth = 80;
 let score = 0;
 
