Update background color in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 body {
   margin: 0;
   overflow: hidden;
-  background-color: #70c5ce; /* Sky blue background */
+  background-color: #253fa7; /* blue background */
 }
 .container {
       background-image: url('background.png');
