--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <div class="book">📖</div>
     <div class="pipe top"></div>
     <div class="pipe bottom"></div>
+    <div class="start-message">Tap to start</div>
+    <div class="game-over-message"></div>
   </div>
   <script src="flappybook.js"></script>
 </body>
