Pipe fixes, text change

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="book">📖</div>
     <div class="pipe top"></div>
     <div class="pipe bottom"></div>
-    <div class="start-message">Tap to start</div>
+    <div class="start-message">Tap to fly<br>Don't get shelved</div>
     <div class="game-over-message"></div>
   </div>
   <script src="flappybook.js"></script>
