--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Flappy Book</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="apple-touch-icon" href="fb.png">
 </head>
 <body>
   <div class="container">
